Update editor settings for vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,14 @@
 {
     "rust-analyzer.checkOnSave.command": "clippy",
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "files.exclude": {
+        "**/target": true,
+        "**/*.venv": true,
+        "**/*.onnx": true,
+        "**/*.dSYM": true,
+        "**/onnxruntime.git": true,
+        "**/Cargo.lock": true,
+        "**/synset.txt": true,
+        ".idea": true
+    }
 }
