--- a/onnxruntime/Cargo.toml
+++ b/onnxruntime/Cargo.toml
@@ -33,4 +33,4 @@ disable-sys-build-script = ["onnxruntime-sys/disable-sys-build-script"]
 generate-bindings = ["onnxruntime-sys/generate-bindings"]
 
 [package.metadata.docs.rs]
-features = ["disable-sys-build-script", "model-fetching"]
+features = ["disable-sys-build-script"]
