--- a/onnxruntime/Cargo.toml
+++ b/onnxruntime/Cargo.toml
@@ -23,9 +23,12 @@ thiserror = "1.0"
 tracing = "0.1"
 
 [dev-dependencies]
-image = "0.23"
+image = "0.24"
 test-log = { version = "0.2", default-features = false, features = ["trace"] }
-tracing-subscriber = "0.2"
+tracing-subscriber = { version = "0.3", default-features = false, features = [
+    "env-filter",
+    "fmt",
+] }
 
 [features]
 # Disable build script; used for https://docs.rs
