--- a/onnxruntime/Cargo.toml
+++ b/onnxruntime/Cargo.toml
@@ -19,6 +19,9 @@ onnxruntime-sys = { version = "0.0.14", path = "../onnxruntime-sys" }
 
 lazy_static = "1.4"
 ndarray = "0.15"
+serde1 = { package = "serde", version = "1.0", optional = true, features = [
+    "derive",
+] }
 thiserror = "1.0"
 tracing = "0.1"
 
@@ -34,6 +37,7 @@ tracing-subscriber = { version = "0.3", default-features = false, features = [
 # Disable build script; used for https://docs.rs
 disable-sys-build-script = ["onnxruntime-sys/disable-sys-build-script"]
 generate-bindings = ["onnxruntime-sys/generate-bindings"]
+serde = ["ndarray/serde", "serde1"]
 
 [package.metadata.docs.rs]
 features = ["disable-sys-build-script"]
